--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -477,7 +477,6 @@ html {
 }
 
 h1 {
-  font-family: "Roboto Slab", serif;
   font-size: 3.75rem;
   font-weight: 300;
 }
@@ -497,6 +496,7 @@ a {
   background-color: #2d3651;
   background-image: url(../img/img-header.png);
   background-repeat: no-repeat;
+  background-size: cover;
   background-position: center;
   position: relative;
 }
@@ -531,12 +531,67 @@ a {
           align-items: center;
 }
 
+.header .header-menu .header-menu__container .header-logo .header-logo__link {
+  font-size: 1.5rem;
+  margin: 15px 298px;
+  letter-spacing: 0.32em;
+  font-stretch: condensed;
+}
+
+.header .header-menu .header-menu__container .header-logo .header-logo__link .header-logo__accent {
+  border: 2px solid #D53D27;
+  padding: 12px 0 14px 3px;
+}
+
 .header .header-menu .header-menu__container .header-navbar .header-navbar__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  margin: 40px 288px;
 }
 
 .header .header-menu .header-menu__container .header-navbar .header-navbar__list .header-navbar__item {
   list-style-type: none;
+  font-size: 1.10rem;
+  letter-spacing: 0.12rem;
+  margin: 0 20px;
+}
+
+.header-content {
+  width: 100%;
+}
+
+.header-content .header-content__container {
+  width: 100%;
+}
+
+.header-content .header-content__container .header-content__title {
+  z-index: 2;
+  position: relative;
+  color: #ffffff;
+  margin: 350px 0 0 403px;
+  font-family: "Roboto Slab";
+  letter-spacing: 0.285rem;
+}
+
+.header-content .header-content__container .header-content__buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.header-content .header-content__container .header-content__buttons .header-content__btn {
+  font-size: 1.25rem;
+  z-index: 0;
+  border: 2px solid #ffffff;
+  font-stretch: condensed;
+  margin: 52px 0;
+  padding: 19px 58;
+  letter-spacing: 0.3rem;
 }
