--- a/assets/scss/header/_header-overlay.scss
+++ b/assets/scss/header/_header-overlay.scss
@@ -1,5 +1,5 @@
 .header-overlay {
-    background-color: #2d3651;
+    background-color: $color-primary;
     opacity: 0.8;
     top: 0;
     left: 0;
