--- a/assets/scss/_mixins.scss
+++ b/assets/scss/_mixins.scss
@@ -1,3 +1,11 @@
+@mixin abs-position ($t: 0, $r: 0, $b: 0, $l: 0) {
+  position: absolute;
+  top: $t;
+  bottom: $b;
+  right: $r;
+  left: $l;
+}
+
 @mixin text-shortener {
   display: block;
   overflow: hidden;
@@ -42,4 +50,4 @@
   padding: 0;
 
   border: 0;
-}
+}
