--- a/assets/scss/header/_header-logo.scss
+++ b/assets/scss/header/_header-logo.scss
@@ -4,14 +4,14 @@
     margin-left: 20px;
     font-weight: 400;
    
-    .header-logo__link {
+    &__link {
       font-family: "Roboto", sans-serif;
 
       .header-logo__accent {
         display: inline-block;
         margin-right: 4px;
         padding: 14px 1px 13px 5px;
-        border: 3px solid #d53d27;
+        border: 3px solid $color-highlight;
       }
     }
   }
