--- a/assets/scss/header/_header.scss
+++ b/assets/scss/header/_header.scss
@@ -1,6 +1,6 @@
 .header {
     min-height: 100vh;
-    background-color: #2d3651;
+    background-color: $color-primary;
     background-image: url(../img/img-header.png);
     background-repeat: no-repeat;
     background-size: cover;
