--- a/assets/scss/sections/skills/_section-skills.scss
+++ b/assets/scss/sections/skills/_section-skills.scss
@@ -1,5 +1,5 @@
 .skills {
-    padding: 10px;
+    padding: 10px 10px 40px;
     @import "sections/skills/skills-container";
     @import "sections/skills/skills-button";
   }
