--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -463,7 +463,7 @@ template {
 /* sm */
 /* xs */
 /* xx */
-.header-menu__container, .header-content__container, .about .about__container {
+.header-menu__container, .header-content__container, .about .about__container, .form__container {
   max-width: 1340px;
   margin: auto;
   display: -webkit-box;
@@ -642,7 +642,7 @@ a {
 }
 
 .skills {
-  padding: 10px;
+  padding: 10px 10px 40px;
 }
 
 .skills .skills__container {
@@ -819,7 +819,6 @@ a {
       -ms-flex-pack: center;
           justify-content: center;
   margin-top: 20px;
-  margin-bottom: 30px;
 }
 
 .skills .skills__button .btn-accent {
@@ -845,11 +844,11 @@ a {
   letter-spacing: 0.055em;
   background-color: #e5e5e5;
   padding-top: 100px;
-  padding-bottom: 100px;
+  padding-bottom: 82px;
 }
 
 .about .about__container {
-  margin: 0 290px;
+  margin: 0 auto;
   padding: 0 20px;
 }
 
@@ -910,6 +909,67 @@ a {
   margin-left: 107px;
 }
 
+.form {
+  padding: 30px 0;
+  background-color: #2d3651;
+}
+
+.form__container {
+  padding-right: 20px;
+  padding-left: 20px;
+}
+
+.form__container .form-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.form__container .form-item .form-item-input {
+  display: block;
+  color: #ffffff;
+  width: 420px;
+  height: 60px;
+  padding: 2px 30px 0 30px;
+  -webkit-transition: background-color 0.5s, border-color 0.5s;
+  -o-transition: background-color 0.5s, border-color 0.5s;
+  transition: background-color 0.5s, border-color 0.5s;
+  letter-spacing: 0.15em;
+  border: 2px solid rgba(255, 255, 255, 0);
+  border-bottom-color: rgba(255, 255, 255, 0.25);
+  background-color: rgba(255, 255, 255, 0.05);
+  font-size: 1.125rem;
+  margin-right: 20px;
+}
+
+.form__container .form-item .form-item-input:hover, .form__container .form-item .form-item-input:focus {
+  border-color: rgba(255, 255, 255, 0.15);
+  border-bottom-color: #ffffff;
+  background-color: rgba(255, 255, 255, 0.15);
+  outline: none;
+}
+
+.form__container .form-item .btn-accent {
+  width: 420px;
+  height: 60px;
+  color: #ffffff;
+  border-color: rgba(255, 255, 255, 0);
+  border-bottom-color: rgba(255, 255, 255, 0.4);
+  background-color: rgba(255, 255, 255, 0.1);
+  letter-spacing: 0.1em;
+  font-size: 1.125rem;
+  font-family: "Robota", sans-serif;
+  -webkit-transition: background-color 0.5s, border-color 0.5s;
+  -o-transition: background-color 0.5s, border-color 0.5s;
+  transition: background-color 0.5s, border-color 0.5s;
+}
+
+.form__container .form-item .btn-accent:hover {
+  background-color: #d66926;
+  border-color: #ffffff;
+  cursor: pointer;
+}
+
 @media (max-width: 992px) {
   h1 {
     font-size: 2.5rem;
@@ -928,6 +988,39 @@ a {
   }
   .skills .skills__container {
     grid-template-areas: "a1 a1 a2 " "a3 a4 a4 " "a5 a5 a6" "a7 a8 a6" "a7 a9 a9";
+  }
+  .about {
+    padding: 80px 0 64px 0;
+  }
+  .about .about__container .about__content {
+    width: 640px;
+    margin: 0;
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+  .about .about__container .about__content h2 {
+    margin-bottom: 37px;
+    font-size: 2rem;
+  }
+  .about .about__container .about__content p {
+    font-size: 1rem;
+    line-height: 1.15em;
+    margin: 15px 0 16px 0;
+  }
+  .about .about__container .about__content p:first-of-type::after {
+    right: -20px;
+  }
+  .about .about__image img {
+    margin-left: 42px;
+  }
+  .form__container .form-item .form-item-input {
+    width: 303.5px;
+    margin: 0 20px 1px 0;
+    padding: 0 30px 1px 30px;
+  }
+  .form__container .form-item .btn-accent {
+    width: 303.5px;
+    padding: 0 0 0 2px;
   }
 }
 
@@ -954,5 +1047,27 @@ a {
     padding-bottom: 10px;
     letter-spacing: 0.05em;
     font-size: 1rem;
+  }
+  .about {
+    padding: 60px 0 60px 0;
+  }
+  .about .about__container .about__content {
+    width: 477px;
+    margin: 0;
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+  .about .about__container .about__content h2 {
+    margin-bottom: 32px;
+    font-size: 1.5rem;
+  }
+  .about .about__container .about__content p {
+    margin: 10px 0 16px 0;
+  }
+  .about .about__container .about__content p:first-of-type::after {
+    right: -10px;
+  }
+  .about .about__image img {
+    margin-left: 20px;
   }
 }
