--- a/assets/scss/sections/_section-about.scss
+++ b/assets/scss/sections/_section-about.scss
@@ -2,15 +2,33 @@
   letter-spacing: 0.055em;
   background-color: $color-gray-light;
   padding-top: 100px;
-  padding-bottom: 100px;
+  padding-bottom: 82px;
+  @media (max-width: 992px) {
+    padding: 80px 0 64px 0;
+  }
+  @media (max-width: 768px) {
+    padding: 60px 0 60px 0;
+  }
 
   .about__container {
     @extend %container;
-    margin: 0 290px;
+    margin: 0 auto;
     padding: 0 20px;
     .about__content {
       display: block;
       width: 924px;
+      @media (max-width: 992px) {
+        width: 640px;
+        margin: 0;
+        padding-top: 0;
+        padding-bottom: 0;
+      }
+      @media (max-width: 768px) {
+        width: 477px;
+        margin: 0;
+        padding-top: 0;
+        padding-bottom: 0;
+      }
 
       h2 {
         font-size: 2.5rem;
@@ -19,6 +37,14 @@
         font-family: "Roboto Slab", serif;
         line-height: 1.2em;
         margin: 0 0 51px 0;
+        @media (max-width: 992px) {
+          margin-bottom: 37px;
+          font-size: 2rem;
+        }
+        @media (max-width: 768px) {
+          margin-bottom: 32px;
+          font-size: 1.5rem;
+        }
 
         .about__content--accent {
           font-family: "Roboto Slab", serif;
@@ -30,7 +56,14 @@
         font-family: "Roboto", serif;
         font-size: 1.125rem;
         position: relative;
-        
+        @media (max-width: 992px) {
+          font-size: 1rem;
+          line-height: 1.15em;
+          margin: 15px 0 16px 0;
+        }
+        @media (max-width: 768px) {
+          margin: 10px 0 16px 0;
+        }
 
         &:first-of-type::after {
           position: absolute;
@@ -40,6 +73,13 @@
           content: "";
           background-color: rgba(99, 117, 136, 0.1);
           right: -55px;
+
+          @media (max-width: 992px) {
+            right: -20px;
+          }
+          @media (max-width: 768px) {
+            right: -10px;
+          }
         }
       }
     }
@@ -55,6 +95,13 @@
       max-height: 480px;
       margin-top: 10px;
       margin-left: 107px;
+      @media (max-width: 992px) {
+        margin-left: 42px;
+      }
+      @media (max-width: 768px) {
+        
+        margin-left: 20px;
+      }
     }
   }
 }
